# five_stars

./: README.md  db.sqlite3  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
five_stars/: ADRS.py  admin.py  apps.py  asgi.py  forms.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
five_stars/migrations/: 0001_initial.py  0002_customuser_image.py  0002_remove_topic_course_remove_subtopic_topic_and_more.py  0003_alter_customuser_email.py  0004_customuser_isteacher.py  0005_alter_customuser_email.py  0006_rename_isteacher_customuser_is_teacher.py
five_stars/templates/: dashboard.html  header.html  home.html  teacher_header.html  teacher_register.html  teacher_register_profile.html
learning/: admin.py  models.py  urls.py  views.py
learning/migrations/: 0001_initial.py  0004_rename_course_id_materialpost_course_title.py
learning/templates/: course_header.html  course_info.html  course_layout.html  header.html  home.html  manage_post.html  material_page.html  upload_page.html
learning/templatetags/: customfilter.py
src/: manage.py
src/five_stars/: ADRS.py  admin.py  asgi.py  forms.py  middleware.py  models.py  settings.py  signals.py  urls.py  views.py  wsgi.py
src/learning/: admin.py  forms.py  models.py  urls.py  views.py
src/teacher/: admin.py  forms.py  models.py  urls.py  views.py
src/user/: admin.py  forms.py  (+3 more)
teacher/: admin.py  forms.py  models.py  urls.py  views.py
templates/: course_layout.html  index.html  learn.html  login.html  register.html
user/: admin.py  forms.py  models.py  urls.py  views.py
(+54 files in other folders)
