[project]
name = "five-stars"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiaoshihou", email = "xiaoshihou@tutamail.com" }
]
dependencies = [
    "django==5.1.1",
    "markdown2==2.5.0",
    "cryptography==43.0.1",
    "pillow==10.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/five_stars", "src/learning/", "src/teacher/", "src/user"]
